# climate-multilingual-chatbot

./: .coveragerc  .gitattributes  .gitignore  AZURE_DEPLOYMENT.md  Dockerfile  LICENSE  README.md  architecture_diagram.gv  architecture_diagram.py  azure_startup.sh  docker-compose.yml  integration_test.py  matplotlib_diagram.py  pyproject.toml  pytest.ini  query_rewriter_report.md  requirements.txt  test_follow_up.py  test_semantic_similarity.py  test_streamlit.py  translation_cache.json
.github/workflows/: main_climatereslianceapp.yml
.history/Multilingual testing/: bake_off_20250728185851.py  bake_off_20250728192314.py  bake_off_20250728192505.py  bake_off_20250728192609.py  bake_off_20250728192611.py  bake_off_20250728192638.py  bake_off_20250728192745.py  bake_off_20250728192751.py  bake_off_20250728192842.py  bake_off_20250728192928.py  bake_off_20250728193012.py  bake_off_20250728193015.py  bake_off_20250728193209.py  bake_off_20250728193254.py  bake_off_20250728193737.py  bake_off_20250728193743.py  bake_off_20250728193817.py  bake_off_20250728193905.py  bake_off_20250728232030.py  bake_off_20250728232056.py
.streamlit/: config.toml
Multilingual testing/: bake_off.py
Multilingual testing/reports/: translation_bakeoff_report.md  translation_results.csv  translation_results.json
src/: main_nova.py
src/models/: gen_response_nova.py  hallucination_guard.py  input_guardrail.py  main_nova.py  nova_flow.py  query_processing_chain.py  query_rewriter.py  rerank.py  (+4 more)
test_env/: pyvenv.cfg
tests/: conftest.py  debug_nova_flow.py  redis_debug.py  speed_test.py
(+60 files in other folders)
