[tool.poetry]
name = "mlccapp"
version = "0.1.0"
description = "Multilingual Climate Change Chatbot Application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aioboto3 = "^14.0.0"
boto3 = "^1.34.0"
cohere = "^5.11.3"
python-dotenv = "^1.0.0"
ray = "^2.38.0"
streamlit = "^1.40.1"
torch = "^2.5.1"
transformers = "^4.44.2"
flagembedding = "^1.3.2"
huggingface-hub = "^0.23.5"
langchain = "^0.3.7"
langchain-community = "^0.3.5"
langchain_cohere="^0.4.2"
pinecone-client = "^5.0.1"
redis = "^5.2.1"
tavily-python = "^0.2.1"
aiohttp = "^3.10.10"
numpy = "^1.26.4"
pandas = "^2.2.3"
tqdm = "^4.66.5"
typing-extensions = "^4.12.2"
jsonschema = "^4.23.0"
ragas = "^0.0.22"
datasets = "^2.19.0"
tokenizers = "^0.19.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^24.2"
isort = "^5.13"
flake8 = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mlccapp = "src.main_nova:main"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3